Kubernetes/deployment/deployment-as-immutable-configmap-as-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immutable-configmap-as-volume
  labels:
    app.kubernetes.io/name: immutable-configmap-as-volume
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: immutable-configmap-as-volume
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immutable-configmap-as-volume
    spec:
      containers:
        - name: alpine
          image: alpine:3
          command:
            - /bin/sh
            - -c
            - while true; do echo $(date) The name of company is - $(cat /etc/config/company_name); sleep 5; done
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: company-name-20150801
